--- a/app/src/main/res/layout/activity_trophy.xml
+++ b/app/src/main/res/layout/activity_trophy.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#64B5F6"
+    android:background="#B2EBF2"
     tools:context=".GraphActivity">
 
     <GridView
